--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -17,6 +17,9 @@
     "paths": {
       "@project/constants": ["constants/src/index.ts"],
       "@project/shared/config/blog": ["shared/config/blog/src/index.ts"],
+      "@project/shared/config/file-loader-up": [
+        "shared/config/file-loader-up/src/index.ts"
+      ],
       "@project/shared/config/users": ["shared/config/users/src/index.ts"],
       "@project/shared/constants": ["shared/constants/src/index.ts"],
       "@project/shared/core": ["shared/core/src/index.ts"],
