--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -20,6 +20,9 @@
       "@project/shared/config/file-loader-up": [
         "shared/config/file-loader-up/src/index.ts"
       ],
+      "@project/shared/config/notificator": [
+        "shared/config/notificator/src/index.ts"
+      ],
       "@project/shared/config/users": ["shared/config/users/src/index.ts"],
       "@project/shared/constants": ["shared/constants/src/index.ts"],
       "@project/shared/core": ["shared/core/src/index.ts"],
